--- a/package.json
+++ b/package.json
@@ -19,5 +19,11 @@
         "phantomizer-libutil": "git://github.com/maboiteaspam/phantomizer-libutil.git",
         "grunt": "0.4.x"
     },
-    "devDependencies": {}
+    "devDependencies": {
+        "docco": "jashkenas/docco",
+        "grunt-docco": "DavidSouther/grunt-docco",
+        "grunt-gh-pages": "~0.9.0",
+        "wrench": "~1.5.6",
+        "grunt-release": "geddski/grunt-release"
+    }
 }
