--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "main": "lib/websupport.js",
   "dependencies": {
     "phantomizer-libutil": "git://github.com/maboiteaspam/phantomizer-libutil.git",
-    "grunt": "0.4.x"
+    "grunt": "0.4.x",
+    "progress": "~1.1.3"
   },
   "devDependencies": {
     "docco": "jashkenas/docco",
